# Mistborn

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Phase0_Instructions.md  README.md  SECURITY.md  TODO.md  VERSION.txt  check.bat  check.sh  mistborn_claudecode_megaprompt (1).txt  mistborn_era1_game_QA.txt  mistborn_mega_prompt.md
.github/: PULL_REQUEST_TEMPLATE.md
Partitur-master/: README.md  requirements-2.txt  requirements.txt
ProjectSettings/: ProjectSettings.asset  TagManager.asset
docs/: AI-CAN-DO.md  CAN-DO.md  CONTROLS.md  PHYSICS-MATH-BOOK.html  PHYSICS-MATH-BOOK.md  PROGRESS_REPORT.md  PROJECT-REQUEST-SceneSetup-Kaderator.md  TEAM-TASKS.md  TODO.md  allomancy-coin-physics.md  allomancy-design.md  allomancy-desmos-functions.md  (+30 more)
music-transcriber/: .gitignore  README.md  pyproject.toml  requirements.txt
music-transcriber/config/: default.yaml  models.yaml
music-transcriber/scripts/: run_pipeline.py
music-transcriber/src/transcriber/: __init__.py  cli.py
music-transcriber/src/transcriber/pipeline/: __init__.py  runner.py
music-transcriber/src/transcriber/quantization/: __init__.py  quantizer.py
music-transcriber/src/transcriber/rendering/: __init__.py  sheet_music.py
music-transcriber/src/transcriber/separation/: __init__.py  demucs.py
music-transcriber/src/transcriber/transcription/: __init__.py  basic_pitch.py  mt3.py
music-transcriber/src/transcriber/utils/: __init__.py  audio.py  config.py  midi.py
music-transcriber/tests/: conftest.py  test_quantization.py  test_runner.py  test_separation.py  test_transcription.py
(+430 files in other folders)
