[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "music-transcriber"
version = "0.1.0"
description = "AI-powered music transcription pipeline: audio → stems → MIDI → sheet music"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "demucs>=4.0.0",
    "basic-pitch>=0.3.0",
    "pretty_midi>=0.2.10",
    "music21>=9.0.0",
    "librosa>=0.10.0",
    "pyyaml>=6.0",
    "click>=8.1.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
]

[project.scripts]
transcribe = "transcriber.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
